--- a/tools/data-mapper/Microsoft.Health.Tools.DataMapper/ClientApp/package.json
+++ b/tools/data-mapper/Microsoft.Health.Tools.DataMapper/ClientApp/package.json
@@ -14,10 +14,12 @@
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "ejs": "^3.1.6",
+    "glob-parent": "^5.1.2"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
